--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"@types/bcryptjs": "2.4.2",
 		"@types/cors": "2.8.13",
 		"@types/express": "4.17.17",
-		"@types/node": "20.5.4",
+		"@types/node": "20.5.6",
+		"@types/validator": "13.11.1",
 		"@typescript-eslint/eslint-plugin": "6.4.1",
 		"@typescript-eslint/parser": "6.4.1",
 		"eslint": "8.47.0",
