update path files and create a register with token and refresh_token

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true
 	},
-	"include": ["src", "src/database/umzug.ts", "migrate.js"]
+	"include": ["src", "src/database/umzug.ts", "migrate.js", "seed.js"]
 }
