--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
 		"cors": "2.8.5",
 		"dotenv": "16.3.1",
 		"express": "4.18.2",
+		"express-async-errors": "3.1.1",
+		"jsonwebtoken": "9.0.1",
 		"pg": "8.11.3",
 		"pg-hstore": "2.3.4",
+		"phc-bcrypt": "1.0.8",
 		"reflect-metadata": "0.1.13",
 		"sequelize": "6.32.1",
 		"sequelize-typescript": "2.1.5",
@@ -27,6 +30,7 @@
 		"@types/bcryptjs": "2.4.2",
 		"@types/cors": "2.8.13",
 		"@types/express": "4.17.17",
+		"@types/jsonwebtoken": "9.0.2",
 		"@types/node": "20.5.6",
 		"@types/validator": "13.11.1",
 		"@typescript-eslint/eslint-plugin": "6.4.1",
