--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"reflect-metadata": "0.1.13",
 		"sequelize": "6.32.1",
 		"sequelize-typescript": "2.1.5",
-		"zod": "3.22.2"
+		"zod": "3.22.2",
+		"zod-validation-error": "1.5.0"
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "2.4.2",
