fix: build app and exported files

--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,17 @@ NODE_ENV=development
 PORT=3333
 PREFIX=v1
 
-# Authentication
-JWT_SECRET=secret
-
+TOKEN_SECRET=secret_token
+TOKEN_EXPIRE_IN=1
+REFRESH_TOKEN_SECRET=refresh_secret_token
+REFRESH_TOKEN_EXPIRE_IN=7
 
 # Database
 PG_HOST=localhost
 PG_SCHEMA=public
-PG_USERNAME=user
-PG_PASSWORD=express_template
-PG_DATABASE=express_template
+PG_USERNAME=docker
+PG_PASSWORD=docker
+PG_DATABASE=docker
 PG_PORT=5432
 
 
