--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
 	"main": "index.js",
 	"license": "MIT",
 	"engines": {
-		"node": "20.5",
-		"npm": "9.8"
+		"node": "18.x",
+		"npm": "9.x"
 	},
 	"scripts": {
 		"dev": "tsnd --respawn -r tsconfig-paths/register src/server.ts",
-		"build": "tsup src --out-dir build"
+		"build": "tsup src --out-dir build",
+		"start": "node build/server.js"
 	},
 	"dependencies": {
 		"bcryptjs": "2.4.3",
